--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.0.0",
     "axios": "^1.7.2",
     "bulma": "^1.0.1",
     "bulma-toast": "^2.4.4",
     "core-js": "^3.8.3",
+    "flutterwave-node": "^1.2.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
